--- a/css/css3-flexbox.html
+++ b/css/css3-flexbox.html
@@ -33,7 +33,7 @@
                         <div id="sec1" class="section active">
                             <h1>CSS3 - FLEXBOX</h1>
                             <div>
-                                Làm phát nói về flẽbox nhé. ahihi
+                                Làm phát nói về flexbox nhé. ahihi
                             </div>
                         </div>
                     </div>
