--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
 			<div class="col-sm-1 vertical-bor hidden-xs"></div>
 		</div>
 		<div id="page-wrap" class="row">
-			Đây là blog của mềnh:
-			1. <a href="https://ntpdung.github.io/dungntp-sharing/css/css3-flexbox.html">CSS3 - FLEXBOX</a>
+                <div class="content col-sm-10 col-sm-offset-2">
+                    <div id="fullpage">
+                        <div id="sec1" class="section active">
+							 <h1>Đây là blog của mềnh:</h1>
+							 <ul>
+								 <li> 1.<a href="https://ntpdung.github.io/dungntp-sharing/css/css3-flexbox.html">CSS3 - FLEXBOX</a></li>
+							 </ul>
+							
+                        </div>
+                    </div>
+                </div>
 		</div>
 	</div>
 </body>
