--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div id="sec1" class="section active">
 							 <h1>Đây là blog của mềnh:</h1>
 							 <ul>
-								 <li> 1.<a href="https://ntpdung.github.io/dungntp-sharing/css/css3-flexbox.html">CSS3 - FLEXBOX</a></li>
+								 <li> 1.<a href="https://ntpdung.github.io/dungntp-sharing/css/css3-flexbox.html" target="_blank">CSS3 - FLEXBOX</a></li>
 							 </ul>
 							
                         </div>
