--- a/css/css3-flexbox.html
+++ b/css/css3-flexbox.html
@@ -28,11 +28,35 @@
             </div>
             <div id="page-wrap" class="row">
                 <div class="content col-sm-10 col-sm-offset-2">
-                    <div id="fullpage">
+                    <div>
                         <div id="sec1" class="section active">
                             <h1>CSS3 - FLEXBOX</h1>
                             <div>
-                                Làm phát nói về flexbox nhé. ahihi
+                                Làm phát nói về flexbox nhé. ahihi.
+                            </div>
+                            <div>
+                                <h2>A. WHAT?</h2>
+                                <ul>
+                                    - Trước khi có Flexbox thì chúng ta sử dụng hình thức này cho việc bố trí (layout):
+                                    <li>1. Block - cho section;</li>
+                                    <li>2. Inline - cho text;</li>
+                                    <li>3. Table - cho dữ liệu hai chiều;</li>
+                                    <li>4. Position - định vị vị trí cụ thể cho một đối tượng;</li>
+                                </ul>
+                                - Flexbox là một thuộc tính mới của css3.<br/>
+                                - Dùng để quy định vị trí các phần tử trên cùng một hàng hoặc một cột.
+                                <h2>A. WHY?</h2>
+                                - Float hoặc Position hoàn toàn có thể làm những nhiệm vụ của Flexbox, tuy nhiên code sẽ cồng kềnh hơn nhiều.<br/>
+                                - Vì điều đó mà Flexbox hiện được xài rất nhiều, Bootstrap 4 cũng đã bỏ float mà nắm tay Flexbox để layout theo grid.<br/>
+                                <h2>C: HOW?</h2>
+                                - Khi thêm thuộc tính <i>display: flex</i> cho một thành phần, thành phần này sẽ được gọi là flex-container, những thành phần
+                                bên trong nó là <i>flex-items</i>
+                                <br/>
+                                <br/>
+                                <img src="https://viblo.asia/uploads/616a3932-1e66-4718-80b3-eea3ab09c244.png" alt="">
+                                <br/>
+                                <br/>
+                                * Những thuộc tính của Flexbox
                             </div>
                         </div>
                     </div>
