--- a/css/css3-flexbox.html
+++ b/css/css3-flexbox.html
@@ -57,6 +57,29 @@
                                 <br/>
                                 <br/>
                                 * Những thuộc tính của Flexbox
+                                <ul>
+                                    <li>
+                                        flex-direction (định nghĩa vị trí của item trong flex-container)
+                                        <ol>
+                                            <li><code>row</code>: Items are placed the same as the text direction./item sẽ đặt ở vị trí tương ứng như vị trí của thẻ html theo chiều ngang</li>
+                                            <li><code>row-reverse</code>: Items are placed opposite to the text direction./item sẽ đặt ở ngược với vị trí của thẻ html theo chiều ngang</li>
+                                            <li><code>column</code>: Items are placed top to bottom.//item sẽ đặt ở vị trí tương ứng như vị trí của thẻ html theo chiều dọc</li>
+                                            <li><code>column-reverse</code>: Items are placed bottom to top./item sẽ đặt ở vị trí ngược với vị trí của thẻ html theo chiều dọc</li>
+                                        </ol>
+                                    </li>
+                                    <li>
+                                        flex-deirection
+                                        <ul>
+                                            <li>row: Items are placed the same as the text direction.</li>
+                                            <li>row-reverse: Items are placed opposite to the text direction.</li>
+                                            <li>column: Items are placed top to bottom.</li>
+                                            <li>column-reverse: Items are placed bottom to top.</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <br/>
+                                ## Game hay:
+                                <a href="http://flexboxfroggy.com/" target="_blank">http://flexboxfroggy.com/</a>
                             </div>
                         </div>
                     </div>
