--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 							 <h1>Đây là blog của mềnh:</h1>
 							 <ul>
 								 <li> 1.<a href="https://ntpdung.github.io/dungntp-sharing/css/css3-flexbox.html" target="_blank">CSS3 - FLEXBOX</a></li>
-							 </ul>
+								<li>2. <a href="https://ntpdung.github.io/dungntp-sharing/web/basic/data-type.html" target="_blank">Data type</a></li>
+								</ul>
 							
                         </div>
                     </div>
