--- a/web/basic/data-type.html
+++ b/web/basic/data-type.html
@@ -52,7 +52,7 @@
                                 * Nói nôm na thì là thế này:
                                 <h4>1. Value Type:</h4>
                                 <div>
-                                    <code> var a = 1; </code>
+                                    <code> var a = 1; </code><br/>
                                     - Lúc mà gõ cái dòng bên trên trong js thì máy tính sẽ tạo ra một stack/box/field/cell (nói chung là tạo ra một cái chỗ để lưu thôi) để lưu cái số 1 cho thằng a<br/>
                                     - Khi thay đổi giá trị của thằng a thì bộ nhớ cũng cập nhật lại giá trị. Hết film, đơn giản thế thôi.
                                 </div>
