--- a/web/basic/data-type.html
+++ b/web/basic/data-type.html
@@ -69,9 +69,9 @@
 
                                     -- Ví dụ dễ hiểu hơn là thế này:<br/>
                                     <code>
-                                        var quần = quầnĐùi;
-                                        var áo = áoBông
-                                        var tủ = {ngănQuần: quần; ngănÁo: áo};
+                                        var quần = quầnĐùi;<br/>
+                                        var áo = áoBông<br/>
+                                        var tủ = {ngănQuần: quần; ngănÁo: áo};<br/>
                                     </code><br/>
                                     - Giả sử trong trường hợp bạn nhờ thằng hàng xóm qua nhà lấy quần áo mang lên công ty giùm bạn. <br/>
                                     - Bạn sẽ bảo với nó là vào tủ đồ kéo cái ngăn đựng quần ra và lấy cho tao cái quần trong đó.<br/>
